tests/NormalTests/paczka1/fuzzy1/74954304.err
Error in line 3: IVg A288 45,8
Error in line 5: 6TsB71 A288 90,8
Error in line 12: mYp7 S52 -5,0
Error in line 10: mYp7 S52 99,6
Error in line 18: A288 S880 97,76
Error in line 8: IVg S52 38,7
Error in line 26: 43cg2 A288 37,1
Error in line 23: A288 S880 360,1
